# bmiCalc_py

bmiCalc/: README.md  setup.cfg
bmiCalc/bmiCalc.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
bmiCalc/calcModule/: bmiCalculator_pandas.py
