[metadata]
name = bmiCalc
version = 0.0.3
author = SK
author_email = SK@xyz.com
description = BMI calculator
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/swap83k/bmiCalc_py
classifiers =
     Programming Language :: Python :: 3
     License :: OSI Approved :: Apache Software License
     Operating System :: OS Independent
[options]
packages = find:
python_requires = >=3.7
include_package_data = True